ECL 9.5:
========

* MOP:

 - CALL-METHOD has only one required argument. Affects only calls to this
   macro inside nonstandard method combinations.

* Visible changes:

 - Physical pathnames do not always have a namestring from which they can be
   reconstructed. This is the case of directory pathnames with version numbers,
   for instance. Formerly ECL would refuse to print those pathnames if
   *PRINT-READABLY* was true, but now it uses instead a #. form.
    > (write (make-pathname :directory '(:relative)
                            :name nil :type nil :version :newest)
             :readably t))
    #.(MAKE-PATHNAME :HOST NIL :DEVICE NIL :DIRECTORY '(:RELATIVE) :NAME NIL
                     :TYPE NIL :VERSION :NEWEST :DEFAULTS NIL)

 - WITH-CSTRING automatically coerces extended strings to base strings,
   signalling an error when this is not possible.

 - New command line arguments, --heap-size, --lisp-stack, --frame-stack and
   --c-stack control the different memory limits.

 - The out of memory error (ext:storage-exhausted) can now be recovered.
   By default a correctable error is signaled and the user is given the
   chance to increase the heap size.

* Bugs fixed:

 - Remove an obsolete #if statement for Solaris that broke current builds
   with Solaris 10.

 - The mechanism for checking the existence of [u]int{16,32,64}_t or other
   replacement types was not used for [u]int8_t.

 - When COMPILE-FILE is invoked with a non-nil value of :OUTPUT-FILE, ECL
   now honors the file type supplied by the user, instead of overriding it
   with "fas" or "fasl". The same applies to COMPILE-FILE-PATHNAME.

 - When building ECL's C preprocessor (dpp), the value of CPPFLAGS was
   not used.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***